--- a/src/pages/Root.module.css
+++ b/src/pages/Root.module.css
@@ -8,7 +8,7 @@
 }
 .div {
   align-self: stretch;
-  background-color: var(--color-whitesmoke);
+  /* background-color: var(--color-whitesmoke); */
   padding: 0 0 var(--padding-5xl);
   gap: 24px;
   max-width: 100%;
@@ -16,12 +16,12 @@
 .root {
   width: 100%;
   position: relative;
-  border-radius: var(--br-5xs);
+  /* border-radius: var(--br-5xs);
   background-color: var(--color-white);
-  border: 2px solid #ced4da;
+  border: 2px solid #ced4da; */
   overflow: hidden;
-  padding: 0 0 489px;
-  gap: 85px;
+  /* padding: 0 0 489px; */
+  /* gap: 85px; */
   line-height: normal;
   letter-spacing: normal;
 }
